--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ python:
 - "pypy"
 # command to install dependencies
 # install: "pip install foo bar --use-mirrors"
-install: pip install coverage --use-mirrors
+install:
+- pip install coverage --use-mirrors
+- pip install coveralls --use-mirrors
 # command to run tests
 # Require 100% coverage to pass tests
 script:
@@ -15,5 +17,7 @@ script:
 - cat tmp_coverage_output
 - if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then grep '^TOTAL.* 0 *100%' tmp_coverage_output ; fi
 - rm -f tmp_coverage_output
+after_success:
+- if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; coveralls ; fi
 notifications:
   email: false
