--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ script:
 - if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then grep '^TOTAL.* 0 *100%' tmp_coverage_output ; fi
 - rm -f tmp_coverage_output
 after_success:
-- if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; coveralls ; fi
+- if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then coveralls ; fi
 notifications:
   email: false
