--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,10 @@ install:
 # command to run tests
 # Require 100% coverage to pass tests
 script:
-- nosetests --with-doctest --with-coverage > tmp_coverage_output 2>&1
+- nosetests --with-doctest --with-coverage > tmp_coverage_output --cover-erase 2>&1
 - cat tmp_coverage_output
 - if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then grep '^TOTAL.* 0 *100%' tmp_coverage_output ; fi
+- coverage report --include='toolz*' --show-missing --fail-under=100
 - rm -f tmp_coverage_output
 after_success:
 - if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then coveralls ; fi
