--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
 - nosetests --with-doctest --with-coverage > tmp_coverage_output --cover-erase 2>&1
 - cat tmp_coverage_output
 - if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then grep '^TOTAL.* 0 *100%' tmp_coverage_output ; fi
-- coverage report --include='toolz*' --show-missing --fail-under=100
+- coverage report --include='toolz*' --omit='*tests*' --show-missing --fail-under=100
 - rm -f tmp_coverage_output
 after_success:
 - if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then coveralls ; fi
