--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,28 @@
 language: python
 python:
-- "2.6"
-- "2.7"
-- "3.2"
-- "3.3"
-- "pypy"
+    - "2.6"
+    - "2.7"
+    - "3.2"
+    - "3.3"
+    - "pypy"
+
 # command to install dependencies
-# install: "pip install foo bar --use-mirrors"
 install:
-- pip install coverage --use-mirrors
-- pip install coveralls --use-mirrors
+    - pip install coverage --use-mirrors
+    - pip install coveralls --use-mirrors
+
 # command to run tests
-# Require 100% coverage to pass tests
+# require 100% coverage to pass tests
 script:
-- nosetests --with-doctest --with-coverage --cover-erase --cover-package=toolz > tmp_coverage_output 2>&1
-- cat tmp_coverage_output
-- if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then grep '^TOTAL.* 0 *100%' tmp_coverage_output ; fi
-- coverage run --source=toolz $(which nosetests)
-- if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then coverage report --include='toolz*' --omit='*tests*' --show-missing --fail-under=100 ; fi
-- rm -f tmp_coverage_output
+    - nosetests --with-doctest --with-coverage --cover-erase --cover-package=toolz > tmp_coverage_output 2>&1
+    - cat tmp_coverage_output
+    - if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then grep '^TOTAL.* 0 *100%' tmp_coverage_output ; fi
+    - coverage run --source=toolz $(which nosetests)
+    - if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then coverage report --include='toolz*' --omit='*tests*' --show-missing --fail-under=100 ; fi
+
+# load coverage status to https://coveralls.io
 after_success:
-- if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then coveralls ; fi
+    - if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then coveralls ; fi
+
 notifications:
   email: false
