--- a/.travis.yml
+++ b/.travis.yml
@@ -12,13 +12,10 @@ install:
     - pip install coveralls --use-mirrors
 
 # command to run tests
-# require 100% coverage to pass tests
+# require 100% coverage (not including test files) to pass Travis CI test
 script:
-    - nosetests --with-doctest --with-coverage --cover-erase --cover-package=toolz > tmp_coverage_output 2>&1
-    - cat tmp_coverage_output
-    - if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then grep '^TOTAL.* 0 *100%' tmp_coverage_output ; fi
-    - coverage run --source=toolz $(which nosetests)
-    - if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then coverage report --include='toolz*' --omit='*tests*' --show-missing --fail-under=100 ; fi
+    - coverage run --source=toolz $(which nosetests) --with-doctest
+    - if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then coverage report --show-missing --fail-under=100 ; fi
 
 # load coverage status to https://coveralls.io
 after_success:
