--- a/.travis.yml
+++ b/.travis.yml
@@ -13,14 +13,14 @@ install:
 
 # command to run tests
 # require 100% coverage (not including test files) to pass Travis CI test
+# To skip pypy: - if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then DOSTUFF ; fi
 script:
     - coverage run --source=toolz $(which nosetests) --with-doctest
     - coverage report --show-missing --fail-under=100
-#    - if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then coverage report --show-missing --fail-under=100 ; fi
 
 # load coverage status to https://coveralls.io
 after_success:
-    - if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then coveralls ; fi
+    - coveralls
 
 notifications:
   email: false
