--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,14 @@ python:
     - "3.3"
     - "pypy"
 
+env:
+    - PEP_IGNORE="E121,E122,E125,E127,E128,E221,E225,E302,E303,E401,E501,W391"
+
 # command to install dependencies
 install:
     - pip install coverage --use-mirrors
     - pip install coveralls --use-mirrors
+    - pip install pep8 --use-mirrors
 
 # command to run tests
 # require 100% coverage (not including test files) to pass Travis CI test
@@ -17,6 +21,7 @@ install:
 script:
     - coverage run --source=toolz $(which nosetests) --with-doctest
     - coverage report --show-missing --fail-under=100
+    - pep8 --ignore=$PEP_IGNORE --show-source .
 
 # load coverage status to https://coveralls.io
 after_success:
